fix: fixed review issues

--- a/lab_010.html
+++ b/lab_010.html
@@ -54,7 +54,7 @@
       <h3><b>Execute</b></h3>
       <pre class="command-line git" data-prompt="$"><code class="language-git">git status</code></pre>
       <h3><b>Output</b></h3>
-      <pre class="command-line git" data-prompt="$" data-filter-output="(out)"><code class="language-git">git init
+      <pre class="command-line git" data-prompt="$" data-filter-output="(out)"><code class="language-git">git status
 (out)On branch main
 (out)
 (out)No commits yet
@@ -69,7 +69,7 @@
       <p>To save the state of this file, we'll commit it to our <code>Git</code> repository! Every commit also
       requires a message that describes the purpose of the commit, which we can set with the <code>-m</code> parameter.</p>
       <h3><b>Execute</b></h3>
-      <pre class="command-line git" data-prompt="$"><code class="language-git">git commit -m "Initial commit"</code></pre>
+      <pre class="command-line git" data-prompt="$"><code class="language-git">git commit -m "feat: add README.md"</code></pre>
       <h3><b>Output</b></h3>
 <pre class="command-line git" data-prompt="$" data-filter-output="(out)"><code class="language-git">git commit -m "feat: add README.md"
 (out)[main (root-commit) f1et44a7] feat: add README.md
