--- a/lab_011.html
+++ b/lab_011.html
@@ -48,9 +48,9 @@
         </li>
       </ul>
       <h2>Change the README.md</h2>
-      Put the follow in the README.md:
+      Put the following in the README.md:
       <h3 class="file-heading"><em>README.md</em></h3>
-      <pre class="file line-numbers"><code class="language-markdown">#&ltYour Name&gt's Personal Website
+      <pre class="file line-numbers"><code class="language-markdown"># &ltYour Name&gt's Personal Website
 This is a personal website built using the Hack4Impact Starter Pack!
 &ltYou can add any description you want here.&gt
 </code></pre>
