--- a/lab_017.html
+++ b/lab_017.html
@@ -49,7 +49,7 @@
         </li>
       </ul>
       <h2>Head</h2>
-      <p>Let's add some more structure to your website. While the main content of the your page goes inside it's <code
+      <p>Let's add some more structure to your website. While the main content of the your page goes inside its <code
           class="language-html">&lt;body&gt;</code>, there is also the <code class="language-html">&lt;head&gt;</code>
         tag which goes before the <code class="language-html">&lt;body&gt;</code>. The <code
           class="language-html">&lt;head&gt;</code> contains information <em>about</em> the page which is not
