--- a/lab_020.html
+++ b/lab_020.html
@@ -49,7 +49,7 @@
       </ul>
       <h2>Generics Containers</h2>
       <p><code class="language-html">&lt;span&gt;</code> and <code class="language-html">&lt;div&gt;</code> are generic
-        containers for content that don't have any semantic meaning to them. Although, we will continue to stress the
+        containers for content that don't have any semantic meaning to them. Although we will continue to stress the
         importance of writing HTML that provides meaning and structure to a page, <em>sometimes</em> we need a
         catch-all,
         generic solution for content that is not easily categorizable into one of the existing HTML tags.</p>
