--- a/lab_021.html
+++ b/lab_021.html
@@ -46,7 +46,7 @@
         <li>Update your HTML to include new structural and semantic tags</li>
       </ul>
       <h2>Add More!</h2>
-      <p>Update the all the pages of your website with the new things we've learned about and that are in
+      <p>Update all the pages of your website with the new things we've learned about and that are in
         <code>index.html</code>.
       </p>
       <ul>
