--- a/lab_022.html
+++ b/lab_022.html
@@ -113,19 +113,21 @@
         <code>index.html</code> so that the world can percieve us! In your <code>index.html</code>, add the following to
         your <code class="language-html">&lt;div class="about-image"&gt;</code> tag.
       </p>
-      <pre><code class="language-html">&lt;img src="&lt;path/to/image&gt;" alt="&lt;description of image&gt;"&gt;</code></pre>
+      <pre><code class="language-html">&lt;img src="&lt;path/to/image&gt;" alt="&lt;description of image&gt;"&gt;</code>
+      </pre>
       <p class="note"><strong>Note:</strong> Image is a self-closing tag like <code
           class="language-html">&lt;br&gt;</code> so you just need an one tag.</p>
       <p>Make sure to put an image in the same directory as all your HTML and other files! We have an image
         <code>sky.jpg</code> which we will add to our page.
       </p>
-      <pre><code class="language-html">&lt;img src="sky.jpg" alt="A video of an image of the sky and clouds being too big"&gt;</code></pre>
+      <pre><code class="language-html">&lt;img src="sky.jpg" alt="A video of an image of the sky and clouds being too
+          big"&gt;</code></pre>
       <video class="video" controls>
         <source src="assets/2202.mp4" type="video/mp4">
       </video>
       <p>Our image is <em>way</em> too big, but we can change it to fit better once we learn CSS. For now let's put a
-        width and/or height on our image using the <code>width</code> and <code>height</code> attributes to keep the image
-        smaller. 
+        width and/or height on our image using the <code>width</code> and <code>height</code> HTML attributes to keep
+        the image smaller.
       </p>
       <p class="note"><strong>Note:</strong> Always add an <code>alt</code> attribute value to increase accessibility
         for
