--- a/lab_026.html
+++ b/lab_026.html
@@ -61,17 +61,16 @@
       </video>
       <ol>
         <li>From your GitHub homepage, click the circular profile icon in the top-right corner of the screen</li>
-        <li>From the dropdown menu, go to <strong>Your respositories</strong></li>
+        <li>From the dropdown menu, go to <strong>Your repositories</strong></li>
         <li>In your repository list, click the bright, green button that says <strong>New</strong></li>
-        <li>Name your repository <code>&lt;username&gt;-github.io</code> and keep it public</li>
+        <li>Name your repository <code>&lt;username&gt;.github.io</code> and keep it public</li>
       </ol>
       <h2>Connect Local Repo to Remote Repo</h2>
       <p>When you make your repository you should see this screen.</p>
       <img class="image" src="assets/2601.png" alt="A newly created GitHub repository">
       <p>GitHub provides some useful snippets of code to connect to a remote repository.
         Since we have an existing repository, let's go with the <em>second option</em> and <strong>push an existing
-          repository
-          from the command line</strong>!</p>
+          repository from the command line</strong>!</p>
       <h3><b>Execute</b></h3>
       <pre class="command-line" data-prompt="$"><code class="language-git">git remote add origin
 https://github.com/&lt;username&gt;/&lt;username&gt;.github.io.git</code></pre>
