--- a/lab_028.html
+++ b/lab_028.html
@@ -56,7 +56,8 @@
         account will be <code>&lt;username&gt;.github.io/&lt;project-name&gt;</code>.
       </p>
       <h2>Share Your Website</h2>
-      <p>Go to GitHub Discussions and in the <strong>Share Your Website!</strong> discussion post, make a reply with a
+      <p>Go to <a href="https://github.com/hack4impact-calpoly/starter-pack/discussions" target="_blank">GitHub Discussions</a>
+        and in the <strong>Share Your Website!</strong> discussion post, make a reply with a
         link to your website. Feel free to tell us a little about it or talk about your progress so far!</p>
 
 
