--- a/lab_029.html
+++ b/lab_029.html
@@ -63,7 +63,7 @@
       <h3 class="file-heading"><em>index.html</em></h3>
       <pre class="file line-numbers" data-range="1,6" data-src="prism/html/2901.html"></pre>
       <p>This will tell your browser to apply the styles in <code>styles.css</code> to your HTML page. We'll be
-      using the same CSS style sheet for all our pages so add the same to all your other HTML pages as well.
+      using the same CSS style sheet for all our pages so add this to all your other HTML pages as well.
       </p>
       <p class="note"><strong>Note:</strong> As you go through these next few sections, be sure to still stage and
         commit your changes. You don't need to push as often to the remote repository, but when you're happy with
