--- a/lab_04.html
+++ b/lab_04.html
@@ -66,7 +66,7 @@
         <source src="assets/0401.mp4" type="video/mp4">
       </video>
       <ol>
-        <li>Hover over the icons on the left-hand side. Click the <strong>Marketplace</strong> icon.</li>
+        <li>Hover over the icons on the left-hand side. Click the <strong>Extensions</strong> icon.</li>
         <li>In the search bar, search for "Prettier".</li>
         <li>Click on the <i>Prettier - Code formatter</i> extension to see its details.</li>
         <li>Click the blue <strong>Install</strong> button to install the Prettier extension.</li>
