--- a/lab_09.html
+++ b/lab_09.html
@@ -51,7 +51,7 @@
       <h3><b>Execute</b></h3>
       <pre class="command-line" data-prompt="$"><code class="language-git">git status</code></pre>
       <h3><b>Output</b></h3>
-      <pre class="command-line" data-prompt="$" data-filter-output="(out)"><code class="language-git">git init
+      <pre class="command-line" data-prompt="$" data-filter-output="(out)"><code class="language-git">git status
 (out)On branch main
 (out)
 (out)No commits yet
