--- a/prism/html/3001.html
+++ b/prism/html/3001.html
@@ -11,21 +11,18 @@
         Developer
         <ul>
           <li>Code code</li>
-          <li>Make things</li>
         </ul>
       </li>
       <li>
         Designer
         <ul>
-          <li>Designs desigsn</li>
-          <li>Make things</li>
+          <li>Designs designs</li>
         </ul>
       </li>
       <li>
         Product Manager
         <ul>
           <li>Product manage</li>
-          <li>Manage products</li>
         </ul>
       </li>
     </ul>
