fix: make all links open in new tab

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
   <ul>
     <li><a href="" target="_blank" rel="noopener">Schedule an Interview</a></li>
-    <li><a href="https://github.com/hack4impact-calpoly/starter-pack/discussions/categories/general" target="_blank"
+    <li><a href="https://github.com/hack4impact-calpoly/starter-pack/discussions" target="_blank"
         rel="noopener">Starter Pack Discussions</a></li>
     <!--   <li><a href="https://github.com/edgecase/git_immersion/issues" target="_blank" rel="noopener">Report an Issue</a> -->
     <!--   </li> -->
@@ -48,7 +48,7 @@
 
     <p>️️♥ Adapted with love by <a href="https://calpoly.hack4impact.org/" target="_blank" rel="noopener">Hack4Impact
         Cal Poly</a> from <a href="https://gitimmersion.com/" target="_blank" rel="noopener">Git
-        Immersion</a> by <a href="https://en.wikipedia.org/wiki/Jim_Weirich">Jim Weirich</a>
+        Immersion</a> by <a href="https://en.wikipedia.org/wiki/Jim_Weirich" target="_blank" rel="noopener">Jim Weirich</a>
     </p>
   </div>
 </body>
