--- a/lab_01.html
+++ b/lab_01.html
@@ -85,7 +85,7 @@
       </p>
       <p>
         If you get stuck, we <i>highly</i> encourage you to ask for help! It's really important to us you learn and
-        get something out of the process. You can ask for help by posting on GitHub discussions or messaging one of
+        get something out of the process. You can ask for help by posting on GitHub Discussions or messaging one of
         the Hack4Impact Engineering members.
       </p>
       <h2>
