--- a/lab_016.html
+++ b/lab_016.html
@@ -75,7 +75,7 @@
         in between the tags. We'll be going over some of the most common and useful tags, but there are so many tags
         that we can't possibly cover them all.</p>
       <p>If you want to explore the tags, we suggest going to the official documentation for HTML: <a
-          href="https://developer.mozilla.org/en-US/docs/Web/HTML">https://developer.mozilla.org/en-US/docs/Web/HTML</a>
+          href="https://developer.mozilla.org/en-US/docs/Web/HTML"  target="_blank" rel="noopener">https://developer.mozilla.org/en-US/docs/Web/HTML</a>
       </p>
       <p class="note"><strong>Note:</strong> Now would be a good time to stage and commit your changes as we're about to
         go into a new topic!
