--- a/lab_025.html
+++ b/lab_025.html
@@ -66,7 +66,7 @@
           put a mixtape on my website?</em>
       </p>
       <p>We encourage you to explore the Mozilla Developer Network Web Documentation for HTML here: <a
-          href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element">https://developer.mozilla.org/en-US/docs/Web/HTML/Element</a>.
+          href="https://developer.mozilla.org/en-US/docs/Web/HTML/Element"  target="_blank" rel="noopener">https://developer.mozilla.org/en-US/docs/Web/HTML/Element</a>.
       </p>
       <p>When developing, always remember to keep semantic HTML in mind!</p>
 
