--- a/lab_03.html
+++ b/lab_03.html
@@ -56,14 +56,14 @@
         <source src="assets/0301.mp4" type="video/mp4">
       </video>
       <ol>
-        <li>Go to the Github homepage: <a href="https://github.com/">https://github.com/</a></li>
+        <li>Go to the Github homepage: <a href="https://github.com/"  target="_blank" rel="noopener">https://github.com/</a></li>
         <li>Click on the <strong>Sign up</strong> button in the top right corner.</li>
         <li>Enter your information, including your username, email address, and password.</li>
         <li>Follow the instructions to making your account!</li>
       </ol>
       <h2>Join Starter Pack Discussions</h2>
-      <p>Access the Hack4Impact Starter Pack GitHub discussions here: <a
-          href="https://github.com/hack4impact-calpoly/starter-pack/discussions">https://github.com/hack4impact-calpoly/starter-pack/discussions</a>
+      <p>Access the Hack4Impact Starter Pack GitHub Discussions here: <a
+          href="https://github.com/hack4impact-calpoly/starter-pack/discussions"  target="_blank" rel="noopener">https://github.com/hack4impact-calpoly/starter-pack/discussions</a>
         or on the home page.</p>
       <p>Once on the page, make yourself known! Make an introduction in the pinned Introductions thread!</p>
       <video controls class="video">
