--- a/lab_04.html
+++ b/lab_04.html
@@ -57,7 +57,7 @@
       <p>This is what Hack4Impact recommends new developers use and what you will need for the Starter Pack.</p>
       <h2>Install Visual Studio Code</h2>
       <p>Download and install Visual Studio Code from here: <a
-          href="https://code.visualstudio.com/Download">https://code.visualstudio.com/Download</a>.</p>
+          href="https://code.visualstudio.com/Download"  target="_blank" rel="noopener">https://code.visualstudio.com/Download</a>.</p>
       <h2>Install the Prettier Extension</h2>
       <p>Just like when writing an essay, you want your code to be readable and look nice. You can do this manually
         or you can use Prettier. Prettier is standard for formatting a variety of web development languages. For the
