--- a/lab_05.html
+++ b/lab_05.html
@@ -65,7 +65,7 @@
       <pre class="command-line" data-prompt="$" data-filter-output="(out)"><code class="language-git">git --version
 (out)git version 2.42.0</code></pre>
       <p>If you don't see the expected output or similar, download and install <code>Git</code> from here: <a
-          href="https://git-scm.com/downloads">https://git-scm.com/downloads</a>
+          href="https://git-scm.com/downloads"  target="_blank" rel="noopener">https://git-scm.com/downloads</a>
       </p>
       <h2>Setup Name and Email</h2>
       <p>Now that we have <code>Git</code> installed, we need to configure it. In your CLI:</p>
