--- a/lab_08.html
+++ b/lab_08.html
@@ -62,7 +62,7 @@
         <li>Click the <strong>Open...</strong> text beneath <strong>Start</strong> or go to <strong>File</strong>
           &gt <strong>Open Folder...</strong> in the menu bar.
         </li>
-        <li>Create a new folder called <code>&ltuser&gt.github.io</code> with <em>your</em> GitHub username.
+        <li>Create a new folder called <code>&lt;username&gt;.github.io</code> with <em>your</em> GitHub username.
           This will be important for later~!</li>
         <li>Click <strong>Open</strong> to open the folder. This is your working directory.</li>
         <li>If you see a popup asking <i>Do you trust the authors of the files in this folder?</i>, click <strong>Yes, I
