--- a/lab_09.html
+++ b/lab_09.html
@@ -46,7 +46,7 @@
         <li>Learn how to check the status of a <code>Git</code> repository</li>
       </ul>
       <h2>Check the Status of the Repository</h2>
-      <p>Use the <code>git status</code> command to check and monitor the status of the repository in the current working
+      <p>Use the <code class="language-git">git status</code> command to check and monitor the status of the repository in the current working
         directory.</p>
       <h3><b>Execute</b></h3>
       <pre class="command-line" data-prompt="$"><code class="language-git">git status</code></pre>
