feat: add more labs

--- a/lab_029.html
+++ b/lab_029.html
@@ -69,11 +69,11 @@
         commit your changes. You don't need to push as often to the remote repository, but when you're happy with
         something it might be a good idea to also push.</p>
         <h2>Make It Your Own</h2>
-        <p>CSS is very flexible and has a lot of capabilities, so instead of describing what you need to do like we
-        did with HTML, we'll give you the options and tell you what we did, but you're free to explore and change the
-        CSS as much or as little as you want!</p>
-        <p>If you just follow our stylings, you'll get a very specific looking website so we encourage you to make it
-        your own!</p>
+        <p>CSS is very flexible and has a lot of capabilities. Instead of describing what everything you need to do like
+        with HTML, we'll outline the necessary CSS versus the optional CSS that you are free to change as much or as little
+        as you'd like.</p>
+        <p>If you just follow our stylings and keep everything the same, you'll get a very specific looking website so 
+        we encourage you to make it our own!</p>
 
 
 
