--- a/lab_030.html
+++ b/lab_030.html
@@ -66,7 +66,7 @@
       <p class="note"><strong>Note:</strong> As always, during this Starter Pack, GitHub Discussions is open for you
         to ask for help!</p>
       <h2>HTML Selectors</h2>
-      <p>HTML selectors are CSS selectors which apply to HTML tags. They are just the name of the HTML tag used as a
+      <p><em>HTML selectors</em> are CSS selectors which apply to HTML tags. They are just the name of the HTML tag used as a
         selector.</p>
       <pre data-range="1,3" data-src="prism/css/3001.css"></pre>
       <p>This will change the <code class="language-css">font-size</code> property of the HTML
@@ -83,7 +83,7 @@
       <p>When we were coding our HTML, we added <code>classes=""</code> as attributes to various HTML tags.
         The reason we did this is so that we could group specific elements together. Now when we are coding our
         CSS, we can apply styles specifically to elements with specific classses.</p>
-      <p>Class selectors are a period followed by the class name. ID selectors are a hashmark or pound symbol
+      <p><em>Class selectors</em> are a period followed by the class name. ID selectors are a hashmark or pound symbol
         followed by the ID name.</p>
       <pre data-range="11,19" data-src="prism/css/3001.css"></pre>
       <p class="note"><strong>Note:</strong> Remember that classes group multiple tags together while IDs can only be
@@ -96,11 +96,11 @@
       <pre data-range="21,30" data-src="prism/css/3001.css"></pre>
       <h2>Attribute Selectors</h2>
       <p>This is an advanced selector that that we'll use to style <code class="language-html">&lt;input&gt;</code>
-        tags. Attribute selectors (<strong>[]</strong>) select an element based on any attributes attached to its HTML
+        tags. <em>Attribute selectors</em> (<strong>[]</strong>) select an element based on any attributes attached to its HTML
         tag.</p>
       <pre data-range="36,49" data-src="prism/css/3001.css"></pre>
       <h2>Child Selectors</h2>
-      <p>Child selectors (<strong>&gt;</strong>) are used to select elements that are <strong>direct children</strong>
+      <p><em>Child selectors</em> (<strong>&gt;</strong>) are used to select elements that are <strong>direct children</strong>
         of another element,
         meaning <em>one nested level down</em>. For example, with this HTML code:</p>
       <pre data-range="9,28" data-src="prism/html/3001.html"></pre>
@@ -109,7 +109,7 @@
           direct children of the unordered list with the <code>id="positions-list"</code></p>
       <pre data-range="51,55" data-src="prism/css/3001.css"></pre>
       <h2>Adjacent Selectors</h2>
-      <p>Adjacent selectors (<strong>+</strong>) select elements that are directly after another element. For example:
+      <p><em>Adjacent selectors</em> (<strong>+</strong>) select elements that are directly after another element. For example:
       </p>
       <pre data-range="57,59" data-src="prism/css/3001.css"></pre>
       <p>This CSS would select all first <code class="language-html">&lt;p&gt;</code> paragraphs immediately following any <code
