--- a/lab_032.html
+++ b/lab_032.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab 32 - Applying CSS
+    Lab 32 - Margins and Padding
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -37,23 +37,15 @@
     </nav>
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
-        <em>Lab 32</em>
-        Applying CSS
+        <em>Lab </em>
+        Margins and Padding
       </h1>
 
       <h2>Goals</h2>
       <ul>
-        <li>Apply some style to our HTML</li>
+        <li>Learn about <code>Git</code></li>
       </ul>
-      <h2>Style, not Structure</h2>
-      <p>Let's add some appearance and design to our HTML. In your <code>styles.css</code>, let's add some changes using HTML selectors first.
-      Add the following CSS to your <code>styles.css</code> file:</p>
-      </p>
-       <h3 class="file-heading"><em>styles.css</em></h3>
-      <pre class="file line-numbers" data-src="prism/css/3201.css" data-range="1,12"></pre>
-      <p>We set the height of the <code class="language-html">&lt;html&gt;</code> tag  to be 100%. This means it will take
-        up the full available space of its parent container. The parent container in this case is the browser window, so our <code class="language-html">&lt;html&gt;</code>
-        will fill up our browser window and give us a good starting point for other styling.</p>
+
 
     </div>
   </main>
