feat: more labs

--- a/lab_029.html
+++ b/lab_029.html
@@ -69,9 +69,9 @@
         commit your changes. You don't need to push as often to the remote repository, but when you're happy with
         something it might be a good idea to also push.</p>
         <h2>Make It Your Own</h2>
-        <p>CSS is very flexible and has a lot of capabilities. Instead of describing what everything you need to do like
-        with HTML, we'll outline the necessary CSS versus the optional CSS that you are free to change as much or as little
-        as you'd like.</p>
+        <p>CSS is very flexible and has a lot of capabilities. Instead of describing everything you need to do like
+        with HTML, we'll go over the most important CSS concepts, outline what the necessary CSS is, and <strong>leave all
+        the rest of the styling up to you</strong>!</p>
         <p>If you just follow our stylings and keep everything the same, you'll get a very specific looking website so 
         we encourage you to make it our own!</p>
 
