--- a/lab_032.html
+++ b/lab_032.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab 32 - Margins and Padding
+    Lab 32 - Grouping and Nesting
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -37,8 +37,8 @@
     </nav>
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
-        <em>Lab </em>
-        Margins and Padding
+        <em>Lab 32</em>
+        Grouping and Nesting
       </h1>
 
       <h2>Goals</h2>
