--- a/lab_033.html
+++ b/lab_033.html
@@ -3,7 +3,7 @@
 
 <head>
   <title>
-    Lab 33 - Borders
+    Lab 33 - Specificity
   </title>
   <meta charset="UTF-8" />
   <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
@@ -38,7 +38,7 @@
     <div id="content" tabindex="-1">
       <h1 class="lab_title">
         <em>Lab 33</em>
-        Borders
+        Specificity
       </h1>
 
       <h2>Goals</h2>
