feat: additional references and labs

--- a/lab_029.html
+++ b/lab_029.html
@@ -63,17 +63,20 @@
       <h3 class="file-heading"><em>index.html</em></h3>
       <pre class="file line-numbers" data-range="1,6" data-src="prism/html/2901.html"></pre>
       <p>This will tell your browser to apply the styles in <code>styles.css</code> to your HTML page. We'll be
-      using the same CSS style sheet for all our pages so add this to all your other HTML pages as well.
+        using the same CSS style sheet for all our pages so add this to all your other HTML pages as well.
       </p>
       <p class="note"><strong>Note:</strong> As you go through these next few sections, be sure to still stage and
         commit your changes. You don't need to push as often to the remote repository, but when you're happy with
         something it might be a good idea to also push.</p>
-        <h2>Make It Your Own</h2>
-        <p>CSS is very flexible and has a lot of capabilities. Instead of describing everything you need to do like
-        with HTML, we'll go over the most important CSS concepts, outline what the necessary CSS is, and <strong>leave all
-        the rest of the styling up to you</strong>!</p>
-        <p>If you just follow our stylings and keep everything the same, you'll get a very specific looking website so 
-        we encourage you to make it our own!</p>
+      <h2>Make It Your Own</h2>
+      <p>CSS is very flexible and very powerful. Instead of describing everything you need to do like
+        with HTML, we'll go over the most important CSS concepts and <strong>leave the rest of the styling up to
+          you</strong>.</p>
+      <p>We'll provide you with what our stylesheet is as well as a stylesheet of just the necessary requirements.
+        If you just follow our stylings and keep everything the same, you'll get a very specific looking website so
+        we encourage you to take only the necessary stylesheet and make it your own!</p>
+      <p class="note"><strong>Note:</strong> If you need any help or if there is some style you are trying to achieve, but
+      are unable to then we <em>strongly</em> suggest you use GitHub Discussions to ask questions. We are here to help you!</p>
 
 
 
